; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/x509v3/extr_v3_purp.c_X509_PURPOSE_get0.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/x509v3/extr_v3_purp.c_X509_PURPOSE_get0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@X509_PURPOSE_COUNT = common dso_local global i64 0, align 8
@xstandard = common dso_local global i32* null, align 8
@xptable = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @X509_PURPOSE_get0(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp slt i32 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %24

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = load i64, i64* @X509_PURPOSE_COUNT, align 8
  %10 = trunc i64 %9 to i32
  %11 = icmp slt i32 %8, %10
  br i1 %11, label %12, label %17

12:                                               ; preds = %7
  %13 = load i32*, i32** @xstandard, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  store i32* %16, i32** %2, align 8
  br label %24

17:                                               ; preds = %7
  %18 = load i32, i32* @xptable, align 4
  %19 = load i32, i32* %3, align 4
  %20 = sext i32 %19 to i64
  %21 = load i64, i64* @X509_PURPOSE_COUNT, align 8
  %22 = sub nsw i64 %20, %21
  %23 = call i32* @sk_X509_PURPOSE_value(i32 %18, i64 %22)
  store i32* %23, i32** %2, align 8
  br label %24

24:                                               ; preds = %17, %12, %6
  %25 = load i32*, i32** %2, align 8
  ret i32* %25
}

declare dso_local i32* @sk_X509_PURPOSE_value(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
